--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "db:seed": "prisma db seed",
     "db:migrate": "prisma migrate deploy",
     "db:clean": "NODE_OPTIONS=\"--loader ts-node/esm\" ts-node scripts/clean.ts",
-    "ingest": "NODE_OPTIONS=\"--loader ts-node/esm\" ts-node scripts/ingest/index.ts",
+    "ingest": "NODE_OPTIONS=\"--loader ts-node/esm --no-warnings\" ts-node scripts/ingest/run.ts",
     "ingest:clean": "pnpm run db:clean && pnpm run ingest",
     "studio": "prisma studio",
     "t": "tsc --noEmit"
