--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "db:push": "prisma db push",
     "db:seed": "prisma db seed",
     "db:migrate": "prisma migrate deploy",
-    "db:clean": "NODE_OPTIONS=\"--loader ts-node/esm\" ts-node scripts/clean.ts",
-    "ingest": "ts-node-esm scripts/ingest/run.ts",
+    "db:clean": "tsx scripts/clean.ts",
+    "ingest": "tsx scripts/ingest/run.ts",
     "ingest:clean": "pnpm run db:clean && pnpm run ingest",
     "studio": "prisma studio",
     "t": "tsc --noEmit"
@@ -40,6 +40,7 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "ts-node": "^10.9.1",
+    "tsx": "^3.13.0",
     "typescript": "5.2.2"
   }
 }
