--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "license": "MIT",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "prisma generate && next dev",
     "build": "prisma generate && next build",
@@ -15,7 +14,7 @@
     "db:seed": "prisma db seed",
     "db:migrate": "prisma migrate deploy",
     "db:clean": "tsx scripts/clean.ts",
-    "ingest": "tsx scripts/ingest/run.ts",
+    "ingest": "NODE_OPTIONS='--experimental-specifier-resolution=node' tsx scripts/ingest/run.ts",
     "ingest:clean": "pnpm run db:clean && pnpm run ingest",
     "studio": "prisma studio",
     "t": "tsc --noEmit"
