--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "postgres-prisma",
-  "repository": "https://github.com/vercel/examples.git",
+  "name": "ecfr",
+  "repository": "https://github.com/AtlantisPleb/ecfr.git",
   "license": "MIT",
   "version": "0.0.0",
   "private": true,
@@ -13,6 +13,9 @@
     "db:push": "prisma db push",
     "db:seed": "prisma db seed",
     "db:migrate": "prisma migrate deploy",
+    "db:clean": "tsx scripts/clean.ts",
+    "ingest": "tsx scripts/ingest/run.ts",
+    "ingest:clean": "pnpm run db:clean && pnpm run ingest",
     "studio": "prisma studio",
     "t": "tsc --noEmit"
   },
@@ -36,6 +39,7 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "ts-node": "^10.9.1",
+    "tsx": "^3.13.0",
     "typescript": "5.2.2"
   }
 }
