--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:seed": "prisma db seed",
     "db:migrate": "prisma migrate deploy",
     "db:clean": "tsx scripts/clean.ts",
+    "db:update-slugs": "tsx scripts/update-agency-slugs.ts",
     "ingest": "tsx scripts/ingest/run.ts",
     "ingest:clean": "pnpm run db:clean && pnpm run ingest",
     "studio": "prisma studio",
