--- a/package.json
+++ b/package.json
@@ -85,5 +85,8 @@
     "vaul": "^1.1.2",
     "yargs": "^17.7.2",
     "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "@types/yargs": "^17.0.33"
   }
 }
