--- a/package.json
+++ b/package.json
@@ -83,6 +83,10 @@
     "tsx": "^3.13.0",
     "typescript": "5.2.2",
     "vaul": "^1.1.2",
+    "yargs": "^17.7.2",
     "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "@types/yargs": "^17.0.33"
   }
 }
