--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "@types/node": "20.8.3",
     "@types/react": "18.2.25",
     "@types/react-dom": "18.2.11",
-    "ai": "^4.1.28",
+    "@vercel/ai": "^1.0.0",
+    "ai": "^2.2.31",
     "autoprefixer": "10.4.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
