--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "t": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^0.0.56",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^5.4.1",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -54,7 +55,7 @@
     "@types/node": "20.8.3",
     "@types/react": "18.2.25",
     "@types/react-dom": "18.2.11",
-    "ai": "^2.2.31",
+    "ai": "^3.4.33",
     "autoprefixer": "10.4.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
