--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "t": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^0.0.56",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^5.4.1",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -54,7 +55,7 @@
     "@types/node": "20.8.3",
     "@types/react": "18.2.25",
     "@types/react-dom": "18.2.11",
-    "ai": "^4.1.28",
+    "ai": "^3.4.33",
     "autoprefixer": "10.4.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -62,11 +63,11 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
     "eslint": "8.51.0",
-    "eslint-config-next": "13.5.4",
+    "eslint-config-next": "14.1.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.475.0",
     "ms": "^2.1.3",
-    "next": "13.5.4",
+    "next": "14.1.0",
     "next-themes": "^0.4.4",
     "postcss": "8.4.31",
     "prisma": "^5.4.1",
