--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/yargs": "^17.0.33"
   }
 }
