--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
     "sonner": "^1.7.4",
@@ -89,6 +90,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/yargs": "^17.0.33"
   }
 }
